...
    <string name="action_verify_server_settings">Update User Permissions</string>

    <!-- Checkpoint and Conflict Resolution Stuff -->
    <string name="all_conflicts_notice">Please wait - scanning for conflicts&#8230;</string>
    <string name="all_tables_scanned_for_conflicts">All tables have been scanned for conflicts</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="take_local">Take Local Version</string>
    <string name="take_server">Take Server Version</string>
    <string name="mark_resolved">Mark Resolved</string>
    <string name="resolve_cannot_complete_message">A value has not been chosen for every conflicting column. The row cannot be resolved.</string>
    <string name="conflict_local_was_deleted_explanation">You have deleted a row someone else has edited.</string>
    <string name="conflict_server_was_deleted_explanation">Another user has deleted a row you have edited.</string>
...

    <string name="verify_server_settings_start">Verify User Permissions</string>
    <string name="verify_server_settings_starting">Starting fetch of user permissions&#8230;</string>
    <string name="verifying_server_settings">Verifying User Permissions&#8230;</string>
    <string name="verify_server_setttings_successful">Verification successful</string>
    <string name="verify_server_setttings_successful_text">Success! User permissions have been updated.</string>
    <string name="verify_server_settings_header">Permissions</string>
    <string name="click_to_verify_server_settings">Verify user permissions</string>
    <string name="warning_no_user_roles">Warning: User permissions have not been verified!\nRunning with reduced privileges.</string>
    <!-- sync service layer messages -->
    <string name="sync_notification_syncing">"ODK-X Sync In Progress %1$s</string>
    <string name="sync_notification_launch_sync_progress_intent">ODK-X Sync Progress</string>
    <string name="sync_notification_failure">"ODK-X Sync %1$s Error</string>
...
    <string name="qr_code_scanner_instruction">Place QR Code inside the rectangle</string>
    <string name="permission_denied">Permission denied</string>
    <string name="camera_permission_rationale">ODK-X Services requires Camera permission to scan QR code</string>
    <string name="allow">Allow</string>
    <string name="not_now">Not now</string>
    <string name="no">No</string>
    <string name="configure_server_settings">Do you want to configure the server settings now?</string>

    <string name="preparing_to_sync">Preparing to Sync</string>


    <string name="app_bar_label">SERVICES</string>
    <string name="main_activity_server_url_label">Server URL:</string>
...
